# USBBCTC

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cc/reinlight/collect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CameraConfig_MTK  CameraConfig_SDM450_4507
app/src/main/cpp/: native-lib.cpp  ucalibrate_types.h  udepthmap_types.h  uface_types.h  uliveness.h  uliveness_types.h
app/src/main/java/cc/uphoton/bctc/activity/: MainActivity.java  PermissionActivity.java  ThisApplictation.java
app/src/main/java/cc/uphoton/bctc/bean/: LivenessResultBean.java
app/src/main/java/cc/uphoton/bctc/utils/: BitmapUtils.java  Const.java  CrashHandler.java  MyUtils.java  ShaderUtil.java
app/src/main/java/cc/uphoton/bctc/view/: DecodePanel.java  GLGraphics.java  GLPanel.java  SimpleViewer.java
app/src/main/res/drawable/: btn_capture.xml  btn_circle.xml  btn_circle_press.xml  btn_convert.xml  btn_liveness.xml  btn_liveness_normal.xml  btn_liveness_press.xml  btn_look.xml  ic_arrow_back.xml  ic_face_recognition.xml  item_selector.xml
app/src/main/res/layout/: activity_main_usb.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/cc/reinlight/collect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
